--- a/css/style.css
+++ b/css/style.css
@@ -52,3 +52,7 @@ ul{
     display: flex;
     justify-content: space-between;
 }
+#alrededor {
+    display: flex;
+    justify-content: space-around;
+}
